--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Registration and Login</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js" defer></script>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <script src="../js/scripts.js" defer></script>
 
 </head>
 <body>
@@ -20,8 +21,8 @@
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
 
-    <label for="upiid">UPI ID:</label>
-    <input type="text" id="upiid" name="upiId" required>
+    <label for="upiId">UPI ID:</label>
+    <input type="text" id="upiId" name="upiId" required>
 
     <label for="mobilenumber">Mobile Number:</label>
     <input type="tel" id="mobilenumber" name="mobileNumber" required>
