--- a/src/main/resources/static/html/account.html
+++ b/src/main/resources/static/html/account.html
@@ -25,9 +25,18 @@
 
     </head>
     <body>
+
+<!--    user information section-->
     <div id = "header">
         <h2>User Account Information</h2>
     </div>
+
+<!--    logout button-->
+    <div id="logoutContainer">
+        <button id="logoutButton">Logout</button>
+    </div>
+
+<!--user information section-->
     <div id="userDetails">
         <p><strong>Name:</strong> <span id="accountName"></span></p>
         <p><strong>Email:</strong> <span id="accountEmail"></span></p>
@@ -35,12 +44,28 @@
         <p><strong>Account Balance:</strong> <span id="accountBalance"></span></p>
         <!-- Add more user details as needed -->
     </div>
+
+<!--user actions section-->
     <div id="userActions">
         <button onclick="showTransactions()">Show Transactions</button>
-        <button onclick="loadWallet()">Load Wallet</button>
+        <button onclick="loadWalletPage()">Load Wallet</button>
         <button onclick="sendMoney()">Send Money</button>
         <!-- Add more action buttons or links as needed -->
     </div>
     <!-- Add more HTML code if necessary -->
+<!-- account.html -->
+
+<!-- ... (existing code) -->
+
+<!-- Transactions table section -->
+<div id="transactionsTableContainer">
+    <h2>Transactions</h2>
+    <table id="transactionsTable">
+        <!-- Table content will be dynamically added by JavaScript -->
+    </table>
+</div>
+
+<!-- ... (existing code) -->
+
     </body>
     </html>
