--- a/src/main/resources/static/html/account.html
+++ b/src/main/resources/static/html/account.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>User Account Information</title>
         <link rel="stylesheet" href="../css/common.css">
+        <script>
+            serverUrl = '[[${@environment.getProperty('server.url')}]]';
+        </script>
         <script src="../js/account.js" defer></script>
         <style>
             /* Add your custom styles here */
