--- a/src/main/resources/static/html/transactions.html
+++ b/src/main/resources/static/html/transactions.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Transactions</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <script>
+         serverUrl = '[[${@environment.getProperty('server.url')}]]';
+    </script>
 </head>
 <body>
 <h2>User Transactions</h2>
