--- a/src/main/resources/static/html/loadWallet.html
+++ b/src/main/resources/static/html/loadWallet.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Load Wallet</title>
     <link rel="stylesheet" href="../css/common.css">
+    <script>
+        serverUrl = '${environment.getProperty(`server.url`)}';
+    </script>
     <script src="../js/loadWallet.js" defer></script>
     <style>
         /* Add your custom styles here */
